traefik/traefik-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-ingress
  namespace: default
  labels:
    k8s-app: traefik-ingress-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      # note the label here must match that in the service.yml
      k8s-app: traefik-ingress-lb
  template:
    metadata:
      labels:
        # note the label here must match that in the service.yml
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik:2.9
        name: traefik-ingress-lb
        ports:
        - name: app-services
          containerPort: 80
        - name: dashboard
          containerPort: 8080
        # the args provide access to the static config of traefik..
        args:
          - --api.insecure
          - --api.debug

# all the backend services will be routed to port 80..
# dashboard will sit on port 80..
